[package]
name = "asff"
version = "0.1.0"
authors = ["Ritesh Sinha <ritsinha@amazon.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.110"
uuid = "0.8"
chrono = "0.4.11"
serde_yaml = "0.8"
validator = "0.10"
validator_derive = "0.10"
regex = "1"
lazy_static = "1"